catkin_ws/logs/iq_gnc/build.make.319.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_gpsSub_cb(const ConstPtr&)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:240:47: error: ‘difference_bet_2_wps’ was not declared in this scope; did you mean ‘different_bet_2_wps’?
  240 |    geometry_msgs::PoseStamped difference_wp = difference_bet_2_wps(drone1_global_position, current_global_position_2);
      |                                               ^~~~~~~~~~~~~~~~~~~~
      |                                               different_bet_2_wps
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:245:97: error: too few arguments to function ‘void set_destination(float, float, float, float)’
  245 |    set_destination(error_wp.pose.position.x, error_wp.pose.position.y,  error_wp.pose.position.z);
      |                                                                                                 ^
In file included from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:163:6: note: declared here
  163 | void set_destination(float x, float y, float z, float psi)
      |      ^~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1804: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
